tests/build/cases/widget/invalid_path_to_property_in_when1.stderr
error[E0433]: failed to resolve: could not find `is_pressed` in `properties`
  --> cases/widget/invalid_path_to_property_in_when1.rs:12:37
   |
12 |         when *#zero_ui::properties::is_pressed {
   |                                     ^^^^^^^^^^ could not find `is_pressed` in `properties`

error[E0433]: failed to resolve: could not find `is_pressed` in `properties`
  --> cases/widget/invalid_path_to_property_in_when1.rs:12:37
   |
12 |         when *#zero_ui::properties::is_pressed {
   |                                     ^^^^^^^^^^ not found in `zero_ui::properties::is_pressed`
   |
help: consider importing one of these items
   |
5  |     use crate::test_widget::__properties__::enabled::property;
   |
5  |     use crate::test_widget::__properties__::id::property;
   |
5  |     use crate::test_widget::__properties__::visibility::property;
   |
5  |     use crate::test_widget::margin::property;
   |
     and 413 other candidates
help: if you import `property`, refer to it directly
   |
12 -         when *#zero_ui::properties::is_pressed {
12 +         when *#is_pressed {
   |

error[E0433]: failed to resolve: could not find `is_pressed` in `properties`
 --> cases/widget/invalid_path_to_property_in_when1.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `zero_ui::properties::is_pressed`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
5 |     use crate::test_widget::__properties__::enabled::property;
  |
5 |     use crate::test_widget::__properties__::id::property;
  |
5 |     use crate::test_widget::__properties__::visibility::property;
  |
5 |     use crate::test_widget::margin::property;
  |
    and 413 other candidates
help: if you import `property`, refer to it directly
  |
3 - #[widget($crate::test_widget)]
  |

error[E0277]: the size for values of type `[WhenInput]` cannot be known at compilation time
   --> cases/widget/invalid_path_to_property_in_when1.rs:3:1
    |
3   | #[widget($crate::test_widget)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[WhenInput]`
note: required by a bound in `Box::<T>::new`
   --> $RUST/alloc/src/boxed.rs
    |
    | impl<T> Box<T> {
    |      ^ required by this bound in `Box::<T>::new`
    = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
